2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:123
	* src/add.c: Fix debugging messages

2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:122
	* man/Makefile.am: Fix install target

2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:121
	* src/getdata.h.in: Add forward declarations for public functions.

2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:120
	* src/putdata.c (putdata64): Fail if passed a CONST or STRING field code.
	* src/string.c (put_string): Added.
	* src/constant.c (put_constant): Added.

	* src/add.c (_GD_Add): Renamed from dirfile_add, which is now a boilerplate
	stub for this internal function.  Added meta field support.
	* src/add.c (dirfile_add_meta dirfile_add_metaraw dirfile_add_metalincom
	dirfile_add_metalinterp dirfile_add_metabit dirfile_add_metamultiply
	dirfile_add_metaphase dirfile_add_metastring dirfile_add_metaconst): Added.

	* src/add.c (_GD_Add): create an empty raw file, when necessary.

2008-10-07   D. V. Wiebe <getdata@ketiltrout.net>  svn:119
	* src/add.c (dirfile_add_string dirfile_add_const): Added.
	* man/dirfile_add_raw: Updated for dirfile_add_string and dirfile_add_const.

2008-10-07   D. V. Wiebe <getdata@ketiltrout.net>  svn:118
	* src/flush.c: Add hostname to comments at the top of the format file.

	* src/nfields (get_nvectors get_nfields_by_type): Added.
	* man/get_nvectors.3 man/get_nfields_by_type.3: Added.

2008-10-07   D. V. Wiebe <getdata@ketiltrout.net>  svn:115
	* src/open.c: Record whether a field is meta.

	* src/open.c: Count strings, constants and meta fields.

	* src/open.c (_GD_CreateDirfile): If creating (or truncating) a dirfile,
	assume GD_UNENCODED if GD_AUTO_ENCODED was specified.

	* src/putdata.c (_GD_DoRawOut): Set GD_E_UNKNOWN_ENCODING instead of
	GD_UNSUPPORTED if the encoding can't be figured out.

	* src/field_list.c (get_constant_values get_constant_list get_string_values
	get_string_list get_vector_list): Added.